--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
 <body>
 
     <div class="header">
-        <img src="image/logo t.png" style="width:11%">
+        <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
         <a class="button info" style="float: right;" onclick="href='login.html'">Masuk</a>
     </div>
 
     <div id="navbar">
-
-        <a class="active" href="home.html"><img src="icon/home.png" style="width:69%"></a>
+        <a class="active" href="index.html"><img src="icon/home.png" style="width:69%"></a>
         <a href="javascript:void(0)">Kursus Saya</a>
         <a href="about.html">Tentang</a>
         <div class="dropdown">
@@ -99,18 +98,18 @@
                 <h3 style="font-family: 'Century Gothic';">Kursus</h3>
             </div>
             <div id="gr-btn">
-                <button class="btn"><span>Fakultas Teknik</span></button>
-                <button class="btn"><span>Fakultas Ilmu Komputer</span></button>
-                <button class="btn"><span>Fakultas Kedokteran</span></button>
-                <button class="btn"><span>Fakultas MIPA</span></button>
-                <button class="btn"><span>Fakultas Ilmu Budaya</span></button>
-                <button class="btn"><span>Fakultas Hukum</span></button>
-                <button class="btn"><span>Fakultas Keperawatan</span></button>
-                <button class="btn"><span>Fakultas Pertanian</span></button>
-                <button class="btn"><span>Fakultas Kesehatan</span></button>
-                <button class="btn"><span>Fakultas Kedokteran Gigi</span></button>
-                <button class="btn"><span>FEB</span></button>
-                <button class="btn"><span>FISIP</span></button>
+                <a href="courses.html"><button class="btn"><span>Fakultas Teknik</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas Ilmu Komputer</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas Kedokteran</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas MIPA</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas Ilmu Budaya</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas Hukum</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas Keperawatan</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas Pertanian</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas Kesehatan</span></button></a>
+                <a href="courses.html"><button class="btn"><span>Fakultas Kedokteran Gigi</span></button></a>
+                <a href="courses.html"><button class="btn"><span>FEB</span></button></a>
+                <a href="courses.html"><button class="btn"><span>FISIP</span></button></a>
             </div>
         </div>
         <br>
@@ -127,8 +126,8 @@
             <div class="foot-col">
                 <div class="foot-col-in">
                     <!-- <div id="ft"> -->
-                    <li><a href="syarat.html">Syarat dan Ketentuan</a></li>
-                    <li><a href="kebijakan.html">Kebijakan Privasi</a></li>
+                    <li><a href="requirement.html">Syarat dan Ketentuan</a></li>
+                    <li><a href="policy.html">Kebijakan Privasi</a></li>
                     <!-- </div> -->
                 </div>
             </div>
