--- a/policy.html
+++ b/policy.html
@@ -31,12 +31,12 @@
 
 <body>
     <div class="header">
-        <img src="image/logo t.png" style="width:11%">
+        <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
         <a class="button info" style="float: right;" onclick="href='login.html'">Masuk</a>
     </div>
 
     <div id="navbar">
-        <a href="home.html"><img src="icon/home.png" style="width:69%"></a>
+        <a href="index.html"><img src="icon/home.png" style="width:69%"></a>
         <a href="javascript:void(0)">Kursus Saya</a>
         <a href="about.html">Tentang</a>
         <div class="dropdown">
@@ -52,7 +52,7 @@
 
     <div class="main-body">
         <div id="wrapper">
-            <h1>Kebijakan Privasi</h1>
+            <text id="jdl">Kebijakan Privasi</text>
 
             <div id="isi_wrapper">
                 <p>
@@ -116,8 +116,8 @@
         <div class="foot-col">
             <div class="foot-col-in">
                 <!-- <div id="ft"> -->
-                <li><a href="syarat.html">Syarat dan Ketentuan</a></li>
-                <li><a href="kebijakan.html">Kebijakan Privasi</a></li>
+                <li><a href="requirement.html">Syarat dan Ketentuan</a></li>
+                <li><a href="policy.html">Kebijakan Privasi</a></li>
                 <!-- </div> -->
             </div>
         </div>
