--- a/edit_profil.html
+++ b/edit_profil.html
@@ -77,7 +77,7 @@
 
 <body>
     <div class="header">
-        <a href="dashboard.html"><img src="image/logo t.png" style="width:11%"></a>
+        <a href="index.html"><img src="image/logo t.png" style="width:11%"></a>
         <a class="button info" style="float: right;" onclick="href='profil.html'"><img src="icon/user.png" style="width:13%"> Habibullah Dzaky M</a>
     </div>
 
