--- a/login.html
+++ b/login.html
@@ -90,8 +90,8 @@
                 <div id="judul_form">
                     <h2>Masuk</h2>
                 </div>
-                <input type="email" name="email" placeholder="Username" autofocus=""><br>
-                <input type="password" name="password" placeholder="Password"><br>
+                <input type="email" name="email" placeholder="Username" autofocus="" required><br>
+                <input type="password" name="password" placeholder="Password" required><br>
             </form>
             <div id="div_register">
                 <a onclick="href='dashboard.html'" class="button info">Masuk</a>
