update fitur admin

--- a/forget_pass.html
+++ b/forget_pass.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Masuk | Media Belajar</title>
+    <title>Lupa Password | Media Belajar</title>
     <link rel="icon" type="image/png" href="image/logo.png">
     <link rel="stylesheet" type="text/css" href="css/top_menu.css" />
     <link rel="stylesheet" type="text/css" href="css/main_style.css" />
