update fitur lagi

--- a/courses_ilkom.html
+++ b/courses_ilkom.html
@@ -86,9 +86,9 @@
                         <div id="kategori">
                             <text id="top">Kategori Kursus :
                                 <select class="select_k">
-                                    <option value="f1" >Fakultas Teknik</option>
-                                    <option value="f2">Fakultas Ilmu Komputer</option>
-                                    <option value="f3" selected>Fakultas Kedokteran</option>
+                                    <option value="f1">Fakultas Teknik</option>
+                                    <option value="f2" selected>Fakultas Ilmu Komputer</option>
+                                    <option value="f3">Fakultas Kedokteran</option>
                                     <option value="f4">Fakultas MIPA</option>
                                     <option value="f5">Fakultas Ilmu Budaya</option>
                                     <option value="f6">Fakultas Hukum</option>
@@ -116,7 +116,15 @@
                                                 <option value="f2"> Terakhir diakses</option>
                                               </select></text>
                             </div>
-
+                            <div class="kotak_wrapper3">
+                                <text>Perancangan Website</text>
+                            </div>
+                            <div class="kotak_wrapper3">
+                                <text>Pemrograman Berbasis Framework</text>
+                            </div>
+                            <div class="kotak_wrapper3">
+                                <text>Pengukuran dan Implementasi Perangkat Lunak</text>
+                            </div>
                         </div>
                     </div>
                 </div>
