--- a/dashboardAdmin.html
+++ b/dashboardAdmin.html
@@ -94,24 +94,36 @@
                                         <option value="f2"> Terakhir diakses</option>
                                     </select></text>
                             </div>
-                            <div class="kotak_wrapper3">
-                                <text>Kalkulus 1</text>
-                            </div>
-                            <div class="kotak_wrapper3">
-                                <text>Kalkulus 2</text>
-                            </div>
-                            <div class="kotak_wrapper3">
-                                <text>Perancangan Website</text>
-                            </div>
-                            <div class="kotak_wrapper3">
-                                <text>Pemrograman Berbasis Framework</text>
-                            </div>
-                            <div class="kotak_wrapper3">
-                                <text>Pengukuran dan Implementasi Perangkat Lunak</text>
-                            </div>
-                            <div class="kotak_wrapper3">
-                                <text>Teknik Robotika dan Vision</text>
-                            </div>
+                            <a href="edit_courses.html" style="color: black;">
+                                <div class="kotak_wrapper3">
+                                    <text>Kalkulus 1</text>
+                                </div>
+                            </a>
+                            <a href="#" style="color: black;">
+                                <div class="kotak_wrapper3">
+                                    <text>Kalkulus 2</text>
+                                </div>
+                            </a>
+                            <a href="#" style="color: black;">
+                                <div class="kotak_wrapper3">
+                                    <text>Perancangan Website</text>
+                                </div>
+                            </a>
+                            <a href="#" style="color: black;">
+                                <div class="kotak_wrapper3">
+                                    <text>Pemrograman Berbasis Framework</text>
+                                </div>
+                            </a>
+                            <a href="#" style="color: black;">
+                                <div class="kotak_wrapper3">
+                                    <text>Pengukuran dan Implementasi Perangkat Lunak</text>
+                                </div>
+                            </a>
+                            <a href="#" style="color: black;">
+                                <div class="kotak_wrapper3">
+                                    <text>Teknik Robotika dan Vision</text>
+                                </div>
+                            </a>
 
                             <br>
                             <text>Tampilkan :</text>
