--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <h3 style="font-family: 'Century Gothic';">Kursus</h3>
             </div>
             <div id="gr-btn">
-                <a href="courses.html"><button class="btn"><span>Fakultas Teknik</span></button></a>
-                <a href="courses.html"><button class="btn"><span>Fakultas Ilmu Komputer</span></button></a>
+                <a href="courses_teknik.html"><button class="btn"><span>Fakultas Teknik</span></button></a>
+                <a href="courses_ilkom.html"><button class="btn"><span>Fakultas Ilmu Komputer</span></button></a>
                 <a href="courses.html"><button class="btn"><span>Fakultas Kedokteran</span></button></a>
                 <a href="courses.html"><button class="btn"><span>Fakultas MIPA</span></button></a>
                 <a href="courses.html"><button class="btn"><span>Fakultas Ilmu Budaya</span></button></a>
