update fitur detail matkul, dan peserta

--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                             <textarea rows="5"></textarea>
 
                             <div id="kirim_form">
-                                <a onclick="href='contact.html'" class="button info">Kirim</a>
+                                <a href="contact.html"><button class="button danger">Kirim</button></a>
                             </div>
                         </form>
                     </div>
