--- a/dashboardAdmin.html
+++ b/dashboardAdmin.html
@@ -96,32 +96,32 @@
                             </div>
                             <a href="edit_courses.html" style="color: black;">
                                 <div class="kotak_wrapper3">
-                                    <text>Kalkulus 1</text>
+                                    <h3>Kalkulus 1</h3>
                                 </div>
                             </a>
                             <a href="#" style="color: black;">
                                 <div class="kotak_wrapper3">
-                                    <text>Kalkulus 2</text>
+                                    <h3>Kalkulus 2</h3>
                                 </div>
                             </a>
                             <a href="#" style="color: black;">
                                 <div class="kotak_wrapper3">
-                                    <text>Perancangan Website</text>
+                                    <h3>Pemrograman Berbasis Framework</h3>
                                 </div>
                             </a>
                             <a href="#" style="color: black;">
                                 <div class="kotak_wrapper3">
-                                    <text>Pemrograman Berbasis Framework</text>
+                                    <h3>Pengukuran dan Implementasi Perangkat Lunak</h3>
                                 </div>
                             </a>
                             <a href="#" style="color: black;">
                                 <div class="kotak_wrapper3">
-                                    <text>Pengukuran dan Implementasi Perangkat Lunak</text>
+                                    <h3>Perancangan Website</h3>
                                 </div>
                             </a>
                             <a href="#" style="color: black;">
                                 <div class="kotak_wrapper3">
-                                    <text>Teknik Robotika dan Vision</text>
+                                    <h3>Teknik Robotika dan Vision</h3>
                                 </div>
                             </a>
 
@@ -144,9 +144,9 @@
                         <div id="kr">
                             <p>Kalkulus 1</p>
                             <p>Kalkulus 2</p>
-                            <p>Perancangan Website</p>
                             <p>Pemrograman Berbasis Framework</p>
                             <p>Pengukuran dan Implementasi Perangkat Lunak</p>
+                            <p>Perancangan Website</p>
                             <p>Teknik Robotika dan Vision</p>
                         </div>
                     </div>
