--- a/edit_courses.html
+++ b/edit_courses.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Tambah Kursus | Media Belajar</title>
+    <title>Ubah Kursus | Media Belajar</title>
     <link rel="icon" type="image/png" href="image/logo.png">
     <link rel="stylesheet" type="text/css" href="css/top_menu.css" />
     <link rel="stylesheet" type="text/css" href="css/main_style.css" />
@@ -119,9 +119,9 @@
                         <div id="kr">
                             <p>Kalkulus 1</p>
                             <p>Kalkulus 2</p>
-                            <p>Perancangan Website</p>
                             <p>Pemrograman Berbasis Framework</p>
                             <p>Pengukuran dan Implementasi Perangkat Lunak</p>
+                            <p>Perancangan Website</p>
                             <p>Teknik Robotika dan Vision</p>
                         </div>
                     </div>
