--- a/edit_profil.html
+++ b/edit_profil.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Edit Profil | Media Belajar</title>
+    <title>Ubah Profil | Media Belajar</title>
     <link rel="icon" type="image/png" href="image/logo.png">
     <link rel="stylesheet" type="text/css" href="css/top_menu.css" />
     <link rel="stylesheet" type="text/css" href="css/main_style.css" />
@@ -85,7 +85,7 @@
             <div id="isi_wrapper" class="baris">
                 <div class="kol-8">
                     <div class="kotak_wrapper">
-                        <h4>Foto Profil</h4>
+                        <h4 style="color: white;">Foto Profil</h4>
                         <img src="icon/user.png" style="width: 20%"><br>
                         <input type="file" class="pic" accept="image/*">
                         <p class="baris">Nama : <input class="inputan" type="text" name="name" value="Habibullah Dzaky Musthafa" autofocus=""></p>
