--- a/detail_courses1.html
+++ b/detail_courses1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Beranda | Media Belajar</title>
+    <title>Pemrograman Berbasis Framework | Media Belajar</title>
     <link rel="icon" type="image/png" href="image/logo.png">
     <link rel="stylesheet" type="text/css" href="css/top_menu.css" />
     <link rel="stylesheet" type="text/css" href="css/main_style.css" />
@@ -62,6 +62,7 @@
         <a href="dashboard.html"><img src="icon/home.png" style="width:69%"></a>
         <a class="active" href="javascript:void(0)">Kursus Saya</a>
         <a href="about_user.html">Tentang</a>
+        <a href="#">Peserta</a>
         <div class="dropdown">
             <button class="dropbtn">Indonesia
                 <i class="fa fa-caret-down"></i>
@@ -75,11 +76,11 @@
 
     <div class="main-body">
         <div id="wrapper">
-            <text id="jdl">Dasbor</text>
+            <text id="jdl">Pemrograman Berbasis Framework</text>
             <div id="isi_wrapper" class="baris">
                 <div class="kol-8">
                     <div class="kotak_wrapper">
-                        <text id="top">Pencarian Kursus :
+                        <text id="top">Pencarian :
                             <input class="search" type="text" placeholder="Cari" required>
                         </text>
                         <div class="kotak_wrapper2">
@@ -95,21 +96,9 @@
                                                 <option value="f2"> Terakhir diakses</option>
                                               </select></text>
                             </div>
-                            <a href="detail_courses1.html" style="color: black;">
-                                <div class="kotak_wrapper3">
-                                    <h3>Pemrograman Berbasis Framework</h3>
-                                </div>
-                            </a>
-                            <a href="detail_courses2.html" style="color: black;">
-                                <div class="kotak_wrapper3">
-                                    <h3>Pengukuran dan Implementasi Perangkat Lunak</h3>
-                                </div>
-                            </a>
-                            <a href="detail_courses3.html" style="color: black;">
-                                <div class="kotak_wrapper3">
-                                    <h3>Perancangan Website</h3>
-                                </div>
-                            </a>
+                            <div class="kotak_wrapper3">
+                                <h3>Kontrak Kuliah</h3>
+                            </div>
                             <br>
                             <text>Tampilkan :</text>
                             <select class="select_fl">
@@ -133,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="kol-4">
+                <div class="kol-4" style="float: right;">
                     <div id="kanan2" class="kotak_wrapper">
                         <div class="kalender">
                             <h3>Oktober</h3>
